--- a/mods/fabric-language-kotlin.pw.toml
+++ b/mods/fabric-language-kotlin.pw.toml
@@ -1,6 +1,7 @@
 name = "Fabric Language Kotlin"
 filename = "fabric-language-kotlin-1.13.8+kotlin.2.3.0.jar"
 side = "both"
+loader = "neoforge"
 
 [download]
 url = "https://cdn.modrinth.com/data/Ha28R6CL/versions/N6D3uiZF/fabric-language-kotlin-1.13.8%2Bkotlin.2.3.0.jar"
