--- a/mods/vmp-fabric.pw.toml
+++ b/mods/vmp-fabric.pw.toml
@@ -1,6 +1,7 @@
 name = "Very Many Players (Fabric)"
 filename = "vmp-fabric-mc1.21.11-0.2.0+beta.7.224-all.jar"
 side = "both"
+loader = "neoforge"
 
 [download]
 url = "https://cdn.modrinth.com/data/wnEe9KBa/versions/Hl96V8qR/vmp-fabric-mc1.21.11-0.2.0%2Bbeta.7.224-all.jar"
