--- a/mods/crash-assistant.pw.toml
+++ b/mods/crash-assistant.pw.toml
@@ -1,13 +1,13 @@
 name = "Crash Assistant"
-filename = "CrashAssistant-fabric-1.21.5-1.21.11-1.10.28.jar"
+filename = "CrashAssistant-neoforge-1.21.9-1.21.11-1.10.28.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "55486b4cf80aa61653f12e9e244f484a041f7a53"
+hash = "e087171b67a5c9db8349e4136ee430ba1cda9bf6"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 7374776
+file-id = 7374777
 project-id = 1154099
