--- a/mods/easyauth.pw.toml
+++ b/mods/easyauth.pw.toml
@@ -1,6 +1,7 @@
 name = "EasyAuth"
 filename = "easyauth-mc1.21.11-3.4.1.jar"
 side = "server"
+loader = "neoforge"
 
 [download]
 url = "https://cdn.modrinth.com/data/aZj58GfX/versions/LPQE6Dfu/easyauth-mc1.21.11-3.4.1.jar"
