--- a/mods/lambdynamiclights.pw.toml
+++ b/mods/lambdynamiclights.pw.toml
@@ -1,6 +1,7 @@
 name = "LambDynamicLights - Dynamic Lights"
 filename = "lambdynamiclights-4.9.1+1.21.11.jar"
 side = "client"
+loader = "neoforge"
 
 [download]
 url = "https://cdn.modrinth.com/data/yBW8D80W/versions/5Tp7kdU0/lambdynamiclights-4.9.1%2B1.21.11.jar"
