--- a/mods/ledger.pw.toml
+++ b/mods/ledger.pw.toml
@@ -1,6 +1,7 @@
 name = "Ledger"
 filename = "ledger-1.3.18.jar"
 side = "server"
+loader = "neoforge"
 
 [download]
 url = "https://cdn.modrinth.com/data/LVN9ygNV/versions/d8PpCdaP/ledger-1.3.18.jar"
