--- a/mods/mixintrace.pw.toml
+++ b/mods/mixintrace.pw.toml
@@ -1,6 +1,7 @@
 name = "MixinTrace"
 filename = "mixintrace-1.1.1+1.17.jar"
 side = "both"
+loader = "neoforge"
 
 [download]
 url = "https://cdn.modrinth.com/data/sGmHWmeL/versions/1.1.1%2B1.17/mixintrace-1.1.1%2B1.17.jar"
