--- a/mods/modmenu.pw.toml
+++ b/mods/modmenu.pw.toml
@@ -1,6 +1,7 @@
 name = "Mod Menu"
 filename = "modmenu-17.0.0-beta.2.jar"
 side = "client"
+loader = "neoforge"
 
 [download]
 url = "https://cdn.modrinth.com/data/mOgUt4GM/versions/JWQVh32x/modmenu-17.0.0-beta.2.jar"
