--- a/mods/placeholder-api.pw.toml
+++ b/mods/placeholder-api.pw.toml
@@ -1,6 +1,7 @@
 name = "Text Placeholder API"
 filename = "placeholder-api-2.8.1+1.21.10.jar"
 side = "both"
+loader = "neoforge"
 
 [download]
 url = "https://cdn.modrinth.com/data/eXts2L7r/versions/T5pDJV1K/placeholder-api-2.8.1%2B1.21.10.jar"
