feat: Update modpack to 1.21.1, add new mods, remove old ones, update existing mod versions, and add client update scripts.

--- a/.packwizignore
+++ b/.packwizignore
@@ -10,3 +10,15 @@ crash-reports/
 usercache.json
 whitelist.json
 ops.json
+
+# Ignore development and metadata
+.vscode/
+.specstory/
+.git/
+AGENTS.md
+client/
+docs/
+README.md
+.gitignore
+.gitattributes
+.packwizignore
